--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "mongodb": "^3.5.9",
-    "node": "^14.4.0"
+    "node": "^14.4.0",
+    "vercel": "^19.1.1"
   }
 }
