--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,6 @@
   "name": "Kommunity",
   "version": 2,
   "env": {
-    "MONGODB_URI": "@my-mongodb-uri"
+    "MONGODB_URI": "mongodb+srv://akotamraju:Malgudi5@kommunity.lxchi.mongodb.net/Kommunity?retryWrites=true&w=majority"
   }
 }
