--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,8 @@
     { "src": "*.html", "use": "@vercel/static" },
     { "src": "*.py", "use": "@vercel/python" },
     { "src": "*.js", "use": "@vercel/node" }
-  ]
+  ],
+    "routes": [
+      { "src": "/(.*)", "dest": "dist/$1" }
+    ]
 }
