--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,8 @@
   },
   "builds": [
     { "src": "*.html", "use": "@vercel/static" },
+    { "src": "*.css", "use": "@vercel/static" },
     { "src": "*.py", "use": "@vercel/python" },
     { "src": "*.js", "use": "@vercel/node" }
-  ]
+  
 }
