--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,7 @@
   "builds": [
     { "src": "*.html", "use": "@vercel/static" },
     { "src": "*.css", "use": "@vercel/static" },
+    { "src": "*.js", "use": "@vercel/static" },
     { "src": "*.py", "use": "@vercel/python" },
     { "src": "*.js", "use": "@vercel/node" }
   ]
