--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 node_modules/
 
-api/node.js
-server.cert
-server.key
+api/vercel.js
+api/tasks.js
+api/tutorial.js
+api/users.js
+
+.vercel
+vercel.json
