--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "name": "Kommunity",
   "version": 2,
   "env": {
-    "MONGODB_URI": "@mongodb-uri"
+    "MONGODB_URI": "@my-mongodb-uri"
   }
   
 } 
