--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-MONGODB_URI=mongodb+srv://akotamraju:Malgudi5@kommunity.lxchi.mongodb.net/Kommunity?retryWrites=true&w=majority
- 
+MONGODB_URI=mongodb+srv://Kommunity:nMV0wxNZHKUCUuNW@kommunity.a0thz.mongodb.net/Kommunity?retryWrites=true&w=majority
